--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
 		<title>coreNavigation - Multi purpose navigation menu for javascript library based on jquery</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.10/css/all.css">
-		<link rel="stylesheet" href="./dist/coreNavigation-1.0.5.min.css" />
+		<link rel="stylesheet" href="./dist/coreNavigation-1.1.0.min.css" />
 		
 		<link rel="stylesheet" href="./assets/css/typography.css" />
 		<link rel="stylesheet" href="./assets/css/custom.css" />
 	</head>
 	<body>
 		<!-- Start Navigation -->
-		<nav>
+		<nav hidden> 
 			<div class="nav-header">
 				<a href="#" class="brand"><img src="./assets/img/brand.png" /></a>
 				<button class="toggle-bar"><span class="fa fa-bars"></span></button>	
@@ -77,7 +77,7 @@
 		</div>
 
 		<script src="./assets/js/jquery.min.js"></script>
-		<script src="./dist/coreNavigation-1.0.5.min.js"></script>
+		<script src="./dist/coreNavigation-1.1.0.min.js"></script>
 		<script>
 			$('nav').coreNavigation({
 				menuPosition: "right", 
